--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ title: Hexo
 subtitle:
 description:
 keywords:
-author: John Doe
-language:
+author: yanbingfei
+language: zh-CN
 timezone:
 
 # URL
